# integer-encoding-rs

./: Cargo.toml  README.md
.github/workflows/: rsgx.yml
src/: fixed.rs  fixed_tests.rs  lib.rs  varint_tests.rs
src/tests/: mod.rs
tests/sgx/app/: CMakeLists.txt  Cargo.toml
tests/sgx/cmake/: sgx.cmake
tests/sgx/enclave/: Cargo.toml
