[package]
name = "integer-encoding"
version = "1.0.7"
authors = ["Lewin Bormann <lbo@spheniscida.de>"]
description = "varint+zigzag and fixedint integer encoding/decoding (https://developers.google.com/protocol-buffers/docs/encoding)"
repository = "https://github.com/dermesser/integer-encoding-rs"
documentation = "https://docs.rs/integer-encoding/"
license-file = "LICENSE"
keywords = ["integer", "varint", "zigzag", "protobuf", "serialize"]
edition = "2018"

exclude = ["/tests/sgx/*"]

[dependencies]

[dependencies.sgx_tstd]
git = "https://github.com/apache/teaclave-sgx-sdk"
rev = "v1.1.1"

[dependencies.sgx_tunittest]
git = "https://github.com/apache/teaclave-sgx-sdk"
optional = true
rev = "v1.1.1"

[features]
default = []
testing = ["sgx_tunittest"]
