[package]
name = "integer-encoding"
version = "1.0.7"
authors = ["Lewin Bormann <lbo@spheniscida.de>"]
description = "varint+zigzag and fixedint integer encoding/decoding (https://developers.google.com/protocol-buffers/docs/encoding)"
repository = "https://github.com/dermesser/integer-encoding-rs"
documentation = "https://docs.rs/integer-encoding/"
license-file = "LICENSE"
keywords = ["integer", "varint", "zigzag", "protobuf", "serialize"]
edition = "2018"

[dependencies]

[dependencies.inventory]
optional    = true
version     = "0.1.6"

[dependencies.sgx_tstd]
git         = "https://github.com/apache/teaclave-sgx-sdk"
rev         = "v1.1.2"

[dependencies.testing]
branch      = "rsgx1.1.2"
git         = "https://github.com/sammyne/teaclave-testing"
optional    = true

[features]
default = []
with-testing = ["inventory", "testing"]

[patch."https://github.com/sammyne/teaclave-testing"]
testing = { path = "/root/code/teaclave-testing" }